--- a/bedgebury-snippets.html
+++ b/bedgebury-snippets.html
@@ -55,7 +55,7 @@ table td {border-collapse: collapse;}
 
     			-->
 
-    			<h3>1 Column</h3>
+    			<h3>1 Column Rename</h3>
     			<!-- Start: Col1 -->
     			<table width="600" border="0" cellpadding="0" cellspacing="0" class="100p">
 				<tr>
